# ai-sim

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  config.yaml  game.db  generate_treasures_techniques.py  main.py  pyproject.toml  test_game.py  需求文档.md
.claude/: settings.local.json
.claude/skills/git-pr/: SKILL.md
.claude/skills/spec-interview/: SKILL.md
.claude/skills/test-validate/: SKILL.md
config/content/: techniques.yaml  treasures.yaml
openspec/changes/add-world-map-system/: design.md  proposal.md  tasks.md
openspec/changes/pure-text-xianxia-game/: proposal.md  tasks.md
openspec/specs/ai-interaction/: spec.md
openspec/specs/ai-response-audit/: spec.md
openspec/specs/character-system/: spec.md
openspec/specs/combat-system/: spec.md
openspec/specs/detection-system/: spec.md
openspec/specs/item-system/: spec.md
openspec/specs/realm-system/: spec.md
saves/: save_slot_99.json
src/: __init__.py  main.py
src/ai/: __init__.py  audit.py  interface.py  parser.py  prompt.py
src/character/: __init__.py  attributes.py  character.py  inventory.py  memory.py  realm.py  spirit_root.py
src/game/: __init__.py  config.py  loop.py  world.py
src/interaction/: __init__.py  combat.py  detector.py  event.py
src/item/: __init__.py  inventory.py  pill.py  treasure.py
src/realm/: __init__.py  breakthrough.py
src/ui/: __init__.py  display.py  panels.py  renderer.py
src/world/: __init__.py  config.py  database.py  map.py  repository.py  retriever.py  save_load.py
test/: test_game.py
tests/: test_ai.py  test_character.py
(+15 files in other folders)
